--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
           cmakeListsTxtPath: '${{ github.workspace }}/src/modengine_extension/CMakeLists.txt'
-          cmakeAppendedArgs: '-G "Unix Makefiles"
+          cmakeAppendedArgs: '-G "Ninja"
             "-DSTEAMWORKS_SDK=${{ github.workspace }}/third-party/SteamworksSDKCI/steamworks_sdk"
             "-DCMAKE_PREFIX_PATH=${{ github.workspace }}/modengine_install/ModEngine-2.0.0.1-win64/share/cmake"'
           useVcpkgToolchainFile: false
