--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,5 +50,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: 'ds3patch-${{ github.sha }}'
-          path: '${{ runner.workspace }}/dist'
+          path: '${{ github.workspace }}/dist'
 
