--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,10 @@ jobs:
           STEAMWORKS_SDK: "${{ github.workspace }}/third-party/SteamworksSDKCI/steamworks_sdk"
           MODENGINE_SDK: "${{ github.workspace }}/modengine_install/ModEngine-2.0.0.1-win64"
 
+      - name: "Copy modengine to dist/"
+        run: |
+          cp -R "${{ github.workspace }}/modengine_install/ModEngine-2.0.0.1-win64" dist/
+
       - name: 'Upload artifacts'
         uses: actions/upload-artifact@v2
         with:
